# Seldon-MLServer

./: README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
docs/examples/: index.md
docs/examples/ivy/: README.ipynb  README.md  models.py  seldondeployment.yaml
docs/examples/ivy/artifacts/: weights.pkl
docs/runtimes/: index.md  ivy.md
ivy_server/: Dockerfile  model-settings.json  models.py  readme.md  regressor.ipynb  requirements.txt
ivy_server/artifacts/: regressor.py  weights.pkl
licenses/: license.txt  license_info.csv  license_info.no_versions.csv
runtimes/ivy/: README.md  pyproject.toml
runtimes/ivy/mlserver_ivy/: __init__.py  ivy.py
runtimes/ivy/tests/: conftest.py  test_ivy.py
runtimes/ivy/tests/testdata/: inference-request.json
