[tool.poetry]
name = "mlserver-ivy"
version = "1.4.0.dev2"
description = "Ivy runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_ivy"}]

[tool.poetry.dependencies]
python = "^3.8"
ivy-core = "*"
mlserver = "*"
torch = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
